--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/" routerLinkActive="active"
         [routerLinkActiveOptions]="{exact: true}">Home</a>
-      <a class="nav-item nav-link" routerLink="/products/" routerLinkActive="active">Products</a>
+      <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a>
       <a class="nav-item nav-link" (click)="logout()">Logout</a>
     </div>
   </nav>
