--- a/src/app/_modules/products/_components/list/list.component.html
+++ b/src/app/_modules/products/_components/list/list.component.html
@@ -1,5 +1,5 @@
 <h1>Products</h1>
-<a routerLink="add" class="btn btn-sm btn-success mb-2">Add Product</a>
+<!-- <a routerLink="add" class="btn btn-sm btn-success mb-2">Add Product</a>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -30,4 +30,4 @@
             </td>
         </tr>
     </tbody>
-</table>
+</table> -->
