--- a/src/app/_components/home/home.component.html
+++ b/src/app/_components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
     <div class="container">
-        <h1>Hi {{user.firstName}} {{user.lastName}}</h1>
+        <h1>Hi {{user?.firstName}} {{user?.lastName}}</h1>
     </div>
     <!-- <router-outlet></router-outlet> -->
 </div>
