--- a/src/app/_modules/account/_components/register/register.component.html
+++ b/src/app/_modules/account/_components/register/register.component.html
@@ -5,31 +5,31 @@
 
             <!--FIRS NAME-->
             <div class="form-group">
-                <label for="firstName">First Name</label>
+                <label>First Name</label>
                 <input type="text" formControlName="firstName" class="form-control" >
             </div>
 
             <!--LAST NAME-->
             <div class="form-group">
-                <label for="lastName">Last Name</label>
+                <label>Last Name</label>
                 <input type="text" formControlName="lastName" class="form-control">
             </div>
 
             <!--USERNAME-->
             <div class="form-group">
-                <label for="username">Username</label>
+                <label>Username</label>
                 <input type="text" formControlName="username" class="form-control">
             </div>
 
             <!--PASSWORD-->
             <div class="form-group">
-                <label for="password">Password</label>
+                <label>Password</label>
                 <input type="password" formControlName="password" class="form-control" >
             </div>
-            
+
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                <button [disabled]="accountService.loading" class="btn btn-primary">
+                    <span *ngIf="accountService.loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Register
                 </button>
                 <a routerLink="../login" class="btn btn-link">Cancel</a>
