--- a/src/app/_modules/products/_components/add-edit/add-edit.component.html
+++ b/src/app/_modules/products/_components/add-edit/add-edit.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="form-group">
-    <label for="description">Price</label>
+    <label for="description">Price ($)</label>
     <input
       formControlName="price"
       id="price"
