--- a/src/app/_modules/products/_components/list/list.component.html
+++ b/src/app/_modules/products/_components/list/list.component.html
@@ -1,10 +1,31 @@
 <a (click)="addNew()" class="btn btn-sm btn-success mb-2">Add Product</a>
 <div *ngIf="products && products.length > 0">
   <div *ngFor="let product of products" style="display: flex">
-    <ul style="font-size: x-large">{{product?.title}}</ul>
-    <ul>Price: {{product?.price}}</ul>
+    <!--    todo add icon on hover-->
+    <ul style="font-size: x-large" class="title"><a (click)="edit(product.id)">{{product?.title}}</a></ul>
+    <ul>Price ($): {{product?.price}}</ul>
     <ul>Description: {{product?.description}}</ul>
-    <ul><img [src]="product?.fileSource[0]" height="150" width="200px" style="margin: 3px;">  </ul>
+    <ul><img [src]="product?.fileSource[0]" height="150" width="200px" style="margin: 3px;"></ul>
+    <ul style="list-style-type:none">
+      <li>
+        <button [disabled]="userId === product.userId"
+                (click)="addToCart(product)"
+                class="btn btn-info">Get it
+        </button>
+      </li>
+      <li>
+        <button [hidden]="product.userId && product.userId !== userId"
+                (click)="deleteProduct(product.id)"
+                class="btn btn-danger">Delete
+        </button>
+      </li>
+      <li>
+        <button class="btn btn-light"
+                (click)="removeFromCart(product)"
+                [hidden]="product.customerId && product.customerId !== userId">Cancel
+        </button>
+      </li>
+    </ul>
   </div>
 </div>
 <!-- <a routerLink="add" class="btn btn-sm btn-success mb-2">Add Product</a>
