#added cash #change name and const names #hix bug with header

--- a/src/app/_modules/products/_components/layout/layout.component.html
+++ b/src/app/_modules/products/_components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <div calss="container">
+  <div calss="container">
         <router-outlet></router-outlet>
     </div>
-</div>>
+</div>
