--- a/src/app/_modules/products/_components/add-edit/add-edit.component.html
+++ b/src/app/_modules/products/_components/add-edit/add-edit.component.html
@@ -29,7 +29,7 @@
     <input
       formControlName="price"
       id="price"
-      type="text"
+      type="number"
       class="form-control">
   </div>
   <div class="form-group">
