--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,27 +2,19 @@
 
 <!-- HEADER -->
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user">
-    <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active"
-       [routerLinkActiveOptions]="{exact: true}"><img style="width: 40px;" src="assets/logo.png"/></a>
-
-    <div class="navbar-nav">
-        <h2 style="color: aqua">Hi {{user?.firstName}} {{user?.lastName}}</h2>
-        <a class="nav-item nav-link" routerLink="/products/products-list">Products</a>
-      <a class="nav-item nav-link" (click)="logout()">Logout</a>
-    </div>
-  </nav>
+<!--  *ngIf="user"-->
+<app-header [withHeader]="withHeader"></app-header>
 
   <!-- SIDEBAR -->
-<!--<div *ngIf="user" class="sidebar-container">
+<div *ngIf="withHeader" class="sidebar-container">
 
   <ul class="sidebar-navigation">
     <li>
-      <a routerLink="/">
-        <i class="fa fa-home" aria-hidden="true"></i> Homepage
+      <a routerLink="/products/products-list">
+        <i class="fa fa-home" aria-hidden="true"></i> Products
       </a>
     </li>
-    <li>
+<!--    <li>
       <a routerLink="/orders">
         <i class="fa fa-tachometer" aria-hidden="true"></i> Orders
       </a>
@@ -31,14 +23,12 @@
       <a routerLink="/about">
         <i class="fa fa-info-circle" aria-hidden="true"></i> About
       </a>
-    </li>
+    </li>-->
   </ul>
-</div>-->
+</div>
 
   <div class="content-container">
-
     <div class="container-fluid">
-
       <div class="jumbotron">
         <!--INSIDE CONTAINER -->
         <div class="app-container" [ngClass]="{'bg-light' : user}">
@@ -46,7 +36,6 @@
           <router-outlet></router-outlet>
         </div>
       </div>
-
     </div>
   </div>
 </div>
