--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,16 +29,18 @@
 
   <div class="content-container">
     <div class="container-fluid">
-      <div class="jumbotron">
+      <!-- <div > -->
         <!--INSIDE CONTAINER -->
         <div class="app-container" [ngClass]="{'bg-light' : user}">
           <alert></alert>
           <router-outlet></router-outlet>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
+
+
 
 
 
